[gd_scene load_steps=3 format=3 uid="uid://bnf7gakl2ocls"]

[ext_resource type="Script" path="res://ScoreBoard/ScoreBoard.gd" id="1_i270t"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j08m7"]
content_margin_left = 24.0
content_margin_top = 12.0
content_margin_right = 24.0
content_margin_bottom = 12.0
bg_color = Color(0.192157, 0.192157, 0.192157, 1)

[node name="ScoreBoard" type="PanelContainer"]
theme_override_styles/panel = SubResource("StyleBoxFlat_j08m7")
script = ExtResource("1_i270t")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="ScoreUI" type="Label" parent="VBox"]
layout_mode = 2
text = "score"

[node name="HiScoreUI" type="Label" parent="VBox"]
layout_mode = 2
text = "score"
